--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "dataset-maker"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = "==3.11.11"
+requires-python = ">=3.9"
 dependencies = [
     "gradio-utils",
     "librosa>=0.11.0",
@@ -12,9 +12,7 @@ dependencies = [
     "rapidfuzz>=3.13.0",
     "requests==2.32.3",
     "starlette==0.38.2",
-    "torch==2.5.1",
-    "torchaudio==2.5.1",
-    "torchvision==0.20.1",
+    "torch>=2.8.0",
     "urllib3==2.3",
     "whisperx>=3.3.4",
 ]
@@ -29,12 +27,27 @@ override-dependencies = [
 [tool.uv.sources]
 gradio-utils = { git = "https://github.com/JarodMica/gradio_utils.git" }
 whisperx = { git = "https://github.com/m-bain/whisperX.git", rev = "44e8bf5bb658ad6e1a80585b987fae2d48b9662c" }
-
-[[tool.uv.index]]
-url = "https://abetlen.github.io/llama-cpp-python/whl/cu121"
-
-[[tool.uv.index]]
-url = "https://download.pytorch.org/whl/cu121"
+torch = [
+  { index = "pytorch-cu128", extra = "cu128" },
+]
+torchvision = [
+  { index = "pytorch-cu128", extra = "cu128" },
+]
+torchaudio = [
+  { index = "pytorch-cu128", extra = "cu128" },
+]
 
 [tool.pyright]
 exclude = ["LLM Models"]
+
+[project.optional-dependencies]
+cu128 = [
+  "torch>=2.7.1",
+  "torchvision>=0.22.1",
+  "torchaudio>=2.7.1"
+]
+
+[[tool.uv.index]]
+name = "pytorch-cu128"
+url = "https://download.pytorch.org/whl/cu128"
+explicit = true
