--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "matchering>=2.0.6",
     "onnx>=1.19.1",
     "onnx2pytorch>=0.5.3",
-    "onnxruntime-gpu>=1.20.2",
+    "onnxruntime>=1.23.2",
+    "optimum[onnxruntime-gpu]>=2.0.0",
     "pyannote-audio==4.0.1",
     "pydub>=0.25.1",
     "pyrubberband>=0.4.0",
